kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atlas
  labels:
    app: atlas
spec:
  selector:
    app: atlas
  ports:
  - name: http
    port: 80
    targetPort: 21000
